--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,14 @@ h1 {
   background-color: #e4e8eb;
 } /* End of assign */
 
+.catpics {
+  color: #323436;
+  display: flex;
+  padding: 10px;
+  margin: 10px;
+  background-color: #e4e8eb;
+} /* End of catpics */
+
 a {
  text-decoration: none;
  color: #323436;
