--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,11 @@ a {
   border: 2px double #b2b6b8; 
   border-radius: 5px; /* Felt like having rounded borders */
 } /* End of assign img */
+
+.catpics img {
+  width: 200px;
+  object-fit: contain;
+  padding: 10px;
+  border: 2px double #b2b6b8; 
+  border-radius: 5px; /* Felt like having rounded borders */
+} /* End of assign img */
